# openMNGlab

./: .gitignore  .readthedocs.yaml  CITATION.cff  README.md  RELEASE.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.ipynb  quickstart.md  search.html  searchindex.js  welcome.html
.github/: CONTRIBUTORS.md
_modules/: index.html
_static/: documentation_options.js
apidoc/: openmnglab.datamodel.exceptions.DataSchemeCompatibilityError.html  openmnglab.datamodel.exceptions.DataSchemeConformityError.html  openmnglab.datamodel.exceptions.DataSchemeError.html  openmnglab.datamodel.exceptions.html  openmnglab.datamodel.html  openmnglab.datamodel.matplot.html  openmnglab.datamodel.matplot.model.MatPlotLibContainer.html  openmnglab.datamodel.matplot.model.MatPlotlibSchema.html  openmnglab.datamodel.matplot.model.html  openmnglab.datamodel.pandas.html  openmnglab.datamodel.pandas.model.IPandasDataScheme.html  openmnglab.datamodel.pandas.model.PandasContainer.html  openmnglab.datamodel.pandas.model.PandasDataScheme.html  openmnglab.datamodel.pandas.model.PandasInputDataScheme.html  openmnglab.datamodel.pandas.model.PandasOutputDataScheme.html  openmnglab.datamodel.pandas.model.PandasStaticDataScheme.html  openmnglab.datamodel.pandas.model.html  openmnglab.datamodel.pandas.schemes.float_list.html  openmnglab.datamodel.pandas.schemes.generic_interval_list.html  openmnglab.datamodel.pandas.schemes.html  openmnglab.datamodel.pandas.schemes.int_list.html  openmnglab.datamodel.pandas.schemes.related_spikes.html  openmnglab.datamodel.pandas.schemes.sorted_spikes.html  openmnglab.datamodel.pandas.schemes.stimulus_list.html  openmnglab.datamodel.pandas.verification.html  (+84 more)
(+221 files in other folders)
