[tool.poetry]
name = "openmnglab"
version = "0.1.0"
description = "A Python framework for microneurography analysis"
authors = ["Peter Konradi <codingchipmunk@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^6.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
