[tool.poetry]
name = "openmnglab"
version = "0.1.0"
description = "A Python framework for microneurography analysis"
authors = ["Peter Konradi <codingchipmunk@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "^6.1.3"
sphinx-book-theme = "^1.0.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
